--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ gen-external-apklibs
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
+# All files
+.idea
+
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
