--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ sourceSets {
 }
 
 dependencies {
+    compile project(':core')
+
+    compile javaxInject
     compile kotlinStdLib
     compile kotlinTestLib
     compile rxJava
