Formatting. Dependencies. Android template.

--- a/build.gradle
+++ b/build.gradle
@@ -1,38 +1,55 @@
 buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.0.1'
-    }
+	ext.kotlinVersion = '1.0.1'
+	repositories {
+		jcenter()
+	}
+	dependencies {
+		classpath 'com.android.tools.build:gradle:1.5.0'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+	}
+}
+
+allprojects {
+	repositories {
+		jcenter()
+	}
 }
 
 ext {
-    //////////////////////////////////////////////////
-    // VERSIONS
+	//////////////////////////////////////////////////
+	// VERSIONS
 
-    // Libraries
+	// Libraries
 
-    daggerVersion = '2.0.2'
-    javaxInjectVersion = '1'
-    kotlinVersion = '1.0.1'
-    rxAndroidVersion = '1.1.0'
-    rxBindingVersion = '0.4.0'
-    rxJavaVersion = '1.1.1'
+	androidSupportVersion = '23.1.1'
+	daggerVersion = '2.0.2'
+	javaxInjectVersion = '1'
+	kotlinVersion = '1.0.1'
+	rxAndroidVersion = '1.1.0'
+	rxBindingVersion = '0.4.0'
+	rxJavaVersion = '1.1.1'
 
-    //////////////////////////////////////////////////
-    // DEPENDENCIES
+	//////////////////////////////////////////////////
+	// DEPENDENCIES
 
-    // Third-party
+	// Android
 
-    dagger = "com.google.dagger:dagger:${daggerVersion}"
-    daggerCompiler = "com.google.dagger:dagger-compiler:${daggerVersion}"
-    javaxInject = "javax.inject:javax.inject:${javaxInjectVersion}"
-    kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
-    kotlinTestLib = "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
-    rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
-    rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
-    rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
-    rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}"
-    rxJava = "io.reactivex:rxjava:${rxJavaVersion}"
+	androidSupport = "com.android.support:support-v4:${androidSupportVersion}"
+	androidSupportAnnotations = "com.android.support:support-annotations:${androidSupportVersion}"
+	androidSupportAppCompat = "com.android.support:appcompat-v7:${androidSupportVersion}"
+	androidSupportDesign = "com.android.support:design:${androidSupportVersion}"
+	androidSupportRecyclerView = "com.android.support:recyclerview-v7:${androidSupportVersion}"
+
+	// Third-party
+
+	dagger = "com.google.dagger:dagger:${daggerVersion}"
+	daggerCompiler = "com.google.dagger:dagger-compiler:${daggerVersion}"
+	javaxInject = "javax.inject:javax.inject:${javaxInjectVersion}"
+	kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+	kotlinTestLib = "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
+	rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
+	rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
+	rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
+	rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}"
+	rxJava = "io.reactivex:rxjava:${rxJavaVersion}"
 }
