--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-	compileSdkVersion 23
-	buildToolsVersion '23.0.2'
+	compileSdkVersion androidCompileSdkVersion
+	buildToolsVersion androidBuildToolsVersion
 
 	defaultConfig {
 		applicationId 'clean.news'
-		minSdkVersion 15
-		targetSdkVersion 23
+		minSdkVersion androidMinSdkVersion
+		targetSdkVersion androidTargetSdkVersion
 		versionCode 1
 		versionName '1.0'
 	}
