--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,15 +1,30 @@
-apply plugin: 'java'
-apply plugin: 'kotlin'
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+android {
+	compileSdkVersion androidCompileSdkVersion
+	buildToolsVersion androidBuildToolsVersion
 
-sourceSets {
-	main {
-		java.srcDirs += 'src/main/kotlin'
+	defaultConfig {
+		minSdkVersion androidMinSdkVersion
+		targetSdkVersion androidTargetSdkVersion
+		versionCode 1
+		versionName '1.0'
 	}
-	test {
-		java.srcDirs += 'src/test/kotlin'
+
+	sourceSets {
+		main.java.srcDirs += 'src/main/kotlin'
+		test.java.srcDirs += 'src/test/kotlin'
+	}
+
+	lintOptions {
+		disable 'InvalidPackage'
+		abortOnError false
+	}
+
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_7
+		targetCompatibility JavaVersion.VERSION_1_7
 	}
 }
 
