Add Retrofit network repo implementation.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,5 +35,7 @@ dependencies {
 	compile javaxInject
 	compile kotlinStdLib
 	compile kotlinTestLib
+	compile retrofit
+	compile retrofitConverterMoshi
 	compile rxJava
 }
