--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ ext {
 	daggerVersion = '2.0.2'
 	javaxInjectVersion = '1'
 	kotlinVersion = '1.0.1'
+	retrofitVersion = '2.0.0'
 	rxAndroidVersion = '1.1.0'
 	rxBindingVersion = '0.4.0'
 	rxJavaVersion = '1.1.1'
@@ -54,6 +55,8 @@ ext {
 	javaxInject = "javax.inject:javax.inject:${javaxInjectVersion}"
 	kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 	kotlinTestLib = "org.jetbrains.kotlin:kotlin-test:${kotlinVersion}"
+	retrofit = "com.squareup.retrofit2:retrofit:$retrofitVersion"
+	retrofitConverterMoshi = "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 	rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
 	rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
 	rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
