Add strategy test.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,8 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 sourceSets {
-	main {
-		java.srcDirs += 'src/main/kotlin'
-	}
-	test {
-		java.srcDirs += 'src/test/kotlin'
-	}
+	main.java.srcDirs += 'src/main/kotlin'
+	test.java.srcDirs += 'src/test/kotlin'
 }
 
 dependencies {
@@ -20,4 +16,8 @@ dependencies {
 	compile kotlinStdLib
 	compile kotlinTestLib
 	compile rxJava
+
+	testCompile assertJ
+	testCompile jUnit
+	testCompile mockito
 }
