--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,12 @@ ext {
 	rxBindingVersion = '0.4.0'
 	rxJavaVersion = '1.1.1'
 
+	// Testing
+
+	assertJVersion = '1.7.1'
+	jUnitVersion = '4.12'
+	mockitoVersion = '1.10.5'
+
 	//////////////////////////////////////////////////
 	// DEPENDENCIES
 
@@ -62,4 +68,10 @@ ext {
 	rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:${rxBindingVersion}"
 	rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:${rxBindingVersion}"
 	rxJava = "io.reactivex:rxjava:${rxJavaVersion}"
+
+	// Testing
+
+	assertJ = "org.assertj:assertj-core:${assertJVersion}"
+	jUnit = "junit:junit:${jUnitVersion}"
+	mockito = "org.mockito:mockito-core:${mockitoVersion}"
 }
