--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,6 +16,12 @@ android {
 	sourceSets {
 		main.java.srcDirs += 'src/main/kotlin'
 	}
+
+	android {
+		lintOptions {
+			abortOnError false
+		}
+	}
 }
 
 dependencies {
