--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,12 +5,8 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 sourceSets {
-	main {
-		java.srcDirs += 'src/main/kotlin'
-	}
-	test {
-		java.srcDirs += 'src/test/kotlin'
-	}
+	main.java.srcDirs += 'src/main/kotlin'
+	test.java.srcDirs += 'src/test/kotlin'
 }
 
 dependencies {
