--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 allprojects {
 	repositories {
 		jcenter()
+		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 	}
 }
 
@@ -36,6 +37,7 @@ ext {
 	javaxAnnotationVersion = '10.0-b28'
 	javaxInjectVersion = '1'
 	kotlinVersion = '1.0.1'
+	kotterKnifeVersion = '0.1.0-SNAPSHOT'
 	retrofitVersion = '2.0.0'
 	rxAndroidVersion = '1.1.0'
 	rxBindingVersion = '0.4.0'
@@ -68,6 +70,7 @@ ext {
 	javaxAnnotation = "org.glassfish:javax.annotation:${javaxAnnotationVersion}"
 	javaxInject = "javax.inject:javax.inject:${javaxInjectVersion}"
 	kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
+	kotterKnife = "com.jakewharton:kotterknife:${kotterKnifeVersion}"
 	retrofit = "com.squareup.retrofit2:retrofit:$retrofitVersion"
 	retrofitConverterMoshi = "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 	rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
