--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ ext {
 	javaxInjectVersion = '1'
 	kotlinVersion = '1.0.1'
 	kotterKnifeVersion = '0.1.0-SNAPSHOT'
+	okHttpVersion = '3.2.0'
 	retrofitVersion = '2.0.0'
 	rxAndroidVersion = '1.1.0'
 	rxBindingVersion = '0.4.0'
@@ -71,7 +72,9 @@ ext {
 	javaxInject = "javax.inject:javax.inject:${javaxInjectVersion}"
 	kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}"
 	kotterKnife = "com.jakewharton:kotterknife:${kotterKnifeVersion}"
+	okHttpLoggingInterceptor = "com.squareup.okhttp3:logging-interceptor:${okHttpVersion}"
 	retrofit = "com.squareup.retrofit2:retrofit:$retrofitVersion"
+	retrofitAdapterRxJava = "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
 	retrofitConverterMoshi = "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 	rxAndroid = "io.reactivex:rxandroid:${rxAndroidVersion}"
 	rxBinding = "com.jakewharton.rxbinding:rxbinding:${rxBindingVersion}"
