--- a/android/build.gradle
+++ b/android/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	compile project(':data')
 
 	kapt daggerCompiler
+	kapt paperParcelCompiler
 
 	provided javaxAnnotation
 
@@ -43,6 +44,7 @@ dependencies {
 	compile kotlinStdLib
 	compile kotterKnife
 	compile okHttpLoggingInterceptor
+	compile paperParcel
 	compile retrofit
 	compile retrofitAdapterRxJava
 	compile retrofitConverterMoshi
