List item byline.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	compile kotterKnife
 	compile okHttpLoggingInterceptor
 	compile paperParcel
+	compile phrase
 	compile retrofit
 	compile retrofitAdapterRxJava
 	compile retrofitConverterMoshi
