--- a/build.gradle
+++ b/build.gradle
@@ -84,9 +84,10 @@ ext {
 	retrofitAdapterRxJava = "com.squareup.retrofit2:adapter-rxjava:$retrofitVersion"
 	retrofitConverterMoshi = "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
 	rxAndroid = "io.reactivex:rxandroid:$rxAndroidVersion"
-	rxBinding = "com.jakewharton.rxbinding:rxbinding:$rxBindingVersion"
-	rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design:$rxBindingVersion"
-	rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4:$rxBindingVersion"
+	rxBinding = "com.jakewharton.rxbinding:rxbinding-kotlin:$rxBindingVersion"
+	rxBindingDesign = "com.jakewharton.rxbinding:rxbinding-design-kotlin:$rxBindingVersion"
+	rxBindingSupportV4 = "com.jakewharton.rxbinding:rxbinding-support-v4-kotlin:$rxBindingVersion"
+	rxBindingAppCompatV7 = "com.jakewharton.rxbinding:rxbinding-appcompat-v7-kotlin:$rxBindingVersion"
 	rxJava = "io.reactivex:rxjava:$rxJavaVersion"
 	rxJoin = "ai.notion:rxjoin:$rxJoinVersion"
 	rxJoinCompiler = "ai.notion:rxjoin-compiler:$rxJoinVersion"
