Add keystore/secrets. Add deploy step and caches.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,15 @@ android {
 		main.java.srcDirs += 'src/main/kotlin'
 	}
 
+	signingConfigs {
+		release {
+			storeFile file('../.ci/michaelpardo_android.keystore')
+			storePassword System.getenv('STORE_PASSWORD')
+			keyAlias = System.getenv('KEY_ALIAS')
+			keyPassword System.getenv('KEY_PASSWORD')
+		}
+	}
+
 	lintOptions {
 		disable 'InvalidPackage'
 		abortOnError false
