--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
 		kotlinVersion = '1.0.7'
 		kotterKnifeVersion = '-SNAPSHOT'
 		okHttpVersion = '3.5.0'
-		paperParcelVersion = '2.0.0'
+		paperParcelVersion = '2.0.1'
 		phraseVersion = '1.1.0'
 		reduxKotlinVersion = '1.2.1'
 		reduxObservableKotlinVersion = '-SNAPSHOT'
@@ -62,7 +62,8 @@ buildscript {
 		kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 		kotterKnife = "com.github.jakewharton:kotterknife:$kotterKnifeVersion"
 		okHttpLoggingInterceptor = "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
-		paperParcel = "nz.bradcampbell:paperparcel-api:$paperParcelVersion"
+		paperParcel = "nz.bradcampbell:paperparcel:$paperParcelVersion"
+		paperParcelApi = "nz.bradcampbell:paperparcel-api:$paperParcelVersion"
 		paperParcelCompiler = "nz.bradcampbell:paperparcel-compiler:$paperParcelVersion"
 		paperParcelKotlin = "nz.bradcampbell:paperparcel-kotlin:$paperParcelVersion"
 		phrase = "com.squareup.phrase:phrase:$phraseVersion"
